fix modal in dark mode

--- a/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
@@ -27,6 +27,8 @@ $pagination-bg: $surface;
 $pagination-hover-bg: $surface;
 $pagination-disabled-bg: $background;
 
+$modal-content-bg: $surface;
+
 $table-border-color: $divider;
 
 // disable rfs
